samples/_failures_safe/1761270863_957a7c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01929162.c: In function ‘main’:
./samples/SAFE/__tmp_01929162.c:173:13: error: expected declaration or statement at end of input
  173 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_01929162.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_01929162.c:173:13: error: expected declaration or statement at end of input
